# python-package-exercise-project-3-team-5

./: README.md  pyproject.toml
src/data/: save.json  save_test.json  save_test_2.json  save_test_3.json  save_test_4.json  write_test.json  write_test_2.json  write_test_3.json  write_test_4.json
src/data/subfolder/: non-save_test.json
src/packageforteam5/: __main__.py  default_path.py  delete_path.py  drinks.py  loader.py  recommendation.py  write.py
src/packageforteam5/tests/: test_default_path.py  test_delete_path.py  test_reader.py  test_write.py
src/pydrinkrecommendation/: __init__.py  __main__.py  default_path.py  delete_path.py  drinks.py  loader.py  recommendation.py  write.py
src/pydrinkrecommendation/tests/: test_default_path.py  test_delete_path.py  test_reader.py  test_write.py
